# srt-fracture-control

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
srt_fracture_control/: __init__.py  pressure_deviation_detector.py  rate_controller.py  reservoir_simulator.py
